# kuku

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.agents/skills/: i-doc-fix  i-doc-review  i-doc-update  i-doc-verify  issue-close  issue-create  issue-design  issue-doc-check  issue-fix-code  issue-fix-design  issue-implement  issue-pr  issue-review-code  issue-review-design  issue-verify-code  issue-verify-design  kaji-run-verify
.claude/: settings.json
.kuku/: config.toml
docs/: ARCHITECTURE.md
docs/adr/: 001-review-cycle-pattern.md  002-v5-base-development.md  003-skill-harness-architecture.md
docs/cli-guides/: claude-code-cli-guide.md  (+2 more)
kuku_harness/: __init__.py  adapters.py  cli.py  cli_main.py  config.py  errors.py  logger.py  models.py  prompt.py  runner.py  skill.py  state.py  verdict.py  workflow.py
legacy/: AGENT.md  bugfix_agent_orchestrator.py  config.toml  test_bugfix_agent_orchestrator.py
scripts/: check_doc_links.py
tests/: __init__.py  test_adapters.py  test_check_doc_links.py  test_cli_args.py  test_cli_main.py  test_cli_streaming_integration.py  test_cli_timestamp.py  test_cli_validate.py  test_config.py  test_cycle_limit.py  test_e2e_cli.py  test_feature_development_workflow.py  test_logging_integration.py  test_prompt_builder.py  test_run_logger.py  test_session_state.py  test_skill_harness_adaptation.py  test_skill_validation.py  test_start_logic.py  test_state_persistence.py  test_timeout_config.py  test_verdict_e2e.py  test_verdict_integration.py  test_verdict_parser.py  test_workflow_execution.py  test_workflow_parser.py  test_workflow_validator.py
workflows/: docs-maintenance.yaml  feature-development.yaml
(+92 files in other folders)
